Fixed alignment issue with summary languages and tools

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,6 +148,10 @@ body {
     margin: 0;
 }
 
+.muted {
+    color: darkgrey;
+}
+
 
 /* Box Model */
 
